[Fix] clock in conference room view displaying incorrectly on mobile

--- a/client/app/components/conference_room/layout/navbar.scss
+++ b/client/app/components/conference_room/layout/navbar.scss
@@ -22,4 +22,13 @@
   .clock-time {
     font-size: 1.2em;
   }
+
+  .navbar-text {
+    margin: 0;
+    padding: 12px;
+  }
+
+  .navbar-header {
+    float: none;
+  }
 }
